# powder-coating-app

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  BACKEND_INTEGRATION_COMPLETE.md  CLAUDE.md  Cargo.toml  GIT_SETUP_INSTRUCTIONS.md  I18N_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION.md  README.md  STRIPE_SETUP_GUIDE.md  package-lock.json  package.json  setup.md
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/api/src/handlers/: checkout.rs  health.rs  mod.rs  webhooks.rs
apps/api/src/routes/: mod.rs
apps/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/frontend-next/: package-lock.json  package.json
apps/frontend-next/app/: globals.css
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/: CheckoutSection.tsx  HeroSection.tsx  LanguageSwitcher.tsx  PortfolioSection.tsx  QuoteForm.tsx  QuotePriceDisplay.tsx  QuoteSection.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  radio-group.tsx
apps/frontend/src/i18n/: config.ts
apps/frontend/src/i18n/locales/: en.json  lv.json
apps/frontend/src/lib/: portfolio-data.ts  quote-calculator.ts  quote-schema.ts  stripe.ts
content/: README.md  about.md  faq.md  home.md
crates/quote_core/: Cargo.toml
crates/quote_core/src/: lib.rs
db/: .gitkeep
infra/docker/: Dockerfile.api  Dockerfile.frontend
public/: schema-org.json  seo.json
